fixed dark mode color

--- a/assets/main.sass
+++ b/assets/main.sass
@@ -8,7 +8,7 @@ body
 	// dark
 	@media (prefers-color-scheme: dark)
 		background-color: #1d1d1d
-		color: #fff 
+		color: #fff
 pre,code
 	font-family: 'Roboto Mono', 'Noto Sans TC', monospace
 code
@@ -18,7 +18,7 @@ code
 	line-height: 1.5em
 	border: 1px solid rgba(var(--vs-text),.1)
 	font-size: .95em
-hr 
+hr
 	border: 0
 	border-top: 1px solid rgba(0,0,0,0.1)
 a
@@ -40,7 +40,7 @@ h1,h2,h3,h4,h5,h6
 	color: rgba(var(--vs-text),1)
 	text-decoration: none
 	&:hover
-		color: rgba(var(--vs-text),.8) 
+		color: rgba(var(--vs-text),.8)
 .vs-input
 	width: 100%
 .vs-alert+.vs-alert
@@ -49,7 +49,7 @@ h1,h2,h3,h4,h5,h6
 	display: flex
 	align-items: center
 	&:not(.nowrap)
-		@media screen and (max-width: 768px) 
+		@media screen and (max-width: 768px)
 			display: block
 	.l
 		flex: 1
@@ -63,27 +63,27 @@ h1,h2,h3,h4,h5,h6
 	width: calc(100% + 12px)
 	display: flex
 	flex-direction: row
-	flex-wrap: wrap 
-	margin: 3px -6px  
+	flex-wrap: wrap
+	margin: 3px -6px
 	--card-row: 3
 	--card-row-sm: 2
 	position: relative
 	.vs-card-content,&>.card,&>.cards
-		width: calc(100% / var(--card-row) - 12px) 
-		margin: 6px 
+		width: calc(100% / var(--card-row) - 12px)
+		margin: 6px
 		@media screen and (max-width: 768px)
-			width: calc(100% / var(--card-row-sm) - 12px) 
+			width: calc(100% / var(--card-row-sm) - 12px)
 	&>.cards
-		width: calc(100% / var(--card-row)) 
+		width: calc(100% / var(--card-row))
 		margin: 0 0
 		flex-wrap: nowrap
 		@media screen and (max-width: 768px)
-			width: calc(100% / var(--card-row-sm)) 
+			width: calc(100% / var(--card-row-sm))
 		&>.card
-			width: 100% 
+			width: 100%
 
-			
-  
+
+
 .flip-card-move
 	transition: all .4s ease
 
@@ -93,7 +93,7 @@ h1,h2,h3,h4,h5,h6
 	transform: scale(0)
 
 .flip-card-leave-active
-	position: absolute !important 
+	position: absolute !important
 
 
 
@@ -124,8 +124,8 @@ h1,h2,h3,h4,h5,h6
 			.course
 				cursor: pointer
 				width: 100%
-				--main-color: rgba(var(--vs-text), .9) 
-				--main-bg: rgba(var(--vs-primary), 0.15)  
+				--main-color: rgba(var(--vs-text), .9)
+				--main-bg: rgba(var(--vs-primary), 0.15)
 				background: var(--main-bg)
 				color: var(--main-color)
 				padding: 12px 6px
@@ -139,7 +139,7 @@ h1,h2,h3,h4,h5,h6
 				position: relative
 				&.conflict
 					--main-color: rgba(var(--vs-danger),1)
-					--main-bg: rgba(var(--vs-danger),.2) 
+					--main-bg: rgba(var(--vs-danger),.2)
 				&:before
 					content: ""
 					background: var(--main-color)
@@ -166,7 +166,7 @@ h1,h2,h3,h4,h5,h6
 				font-size: 1.15em
 				display: flex
 				align-items: center
-				justify-content: center 
+				justify-content: center
 
 .list
 	.item
@@ -191,3 +191,11 @@ h1,h2,h3,h4,h5,h6
 	//dark
 	@media (prefers-color-scheme: dark)
 		background: #343434
+// fix color
+.vs-select--state-dark
+	.vs-select__input
+		color: rgba(var(--vs-text),1)
+		background: rgba(var(--vs-text),.05)
+	.vs-icon-arrow
+		&:before,&:after
+			background: rgba(var(--vs-text),1)
